--- a/stylesheets/rent.scss
+++ b/stylesheets/rent.scss
@@ -449,8 +449,8 @@ body {
 				font-size: 1rem;
 			}
 			.header-title {
-				font-size: 1.6rem;
-				line-height: 2.4rem;
+				font-size: 2rem;
+				line-height: 1.5;
 			}
 			.header-desc {
 				width: 80%;
@@ -565,8 +565,8 @@ body {
 				width: 100%;
 			}
 			.card-desc {
-				font-size: 1.2rem;
-				line-height: 1.8rem;
+				font-size: 1.4rem;
+				line-height: 1.5;
 				margin-top: 4rem;
 				width: 60%;
 			}
