--- a/stylesheets/class.scss
+++ b/stylesheets/class.scss
@@ -157,7 +157,7 @@ body {
 					padding: 0 10%;
 					height: 5rem;
 					width: 100%;
-					margin-bottom: 10rem;
+					margin-bottom: 15rem;
 					cursor: default;
 					.teacher-profile {
 						width: 5rem;
@@ -190,7 +190,7 @@ body {
 				z-index: 2;
 				width: 100%;
 				height: 10rem;
-				bottom: -4rem;
+				bottom: 0;
 				overflow: hidden;
 				cursor: pointer;
 				@include transition(all 0.5s ease);
@@ -550,7 +550,7 @@ body {
 					.lesson-card__teacher-profile {
 						padding: 0 5%;
 						height: 4rem;
-						margin-bottom: 9rem;
+						margin-bottom: 13rem;
 						.teacher-profile {
 							margin-left: 4%;
 							width: 4rem;
@@ -630,19 +630,22 @@ body {
 					font-size: 1rem;
 				}
 				.lesson-header__title {
-					font-size: 1.4rem;
-					line-height: 2.4rem;
+					font-size: 2rem;
+					line-height: 1.5;
+					word-break: keep-all;
+					word-wrap: break-word;
+					width: 75%;
 				}
 			}
 		}
 		.lesson-content {
-			padding: 0 12%;
-			margin-top: -25%;
+			padding: 0 10%;
+			margin-top: -20%;
 			@include flex-direction(column);
 			.lesson-content__type {
 				width: 100%;
 				margin-left: 0;
-				margin-bottom: 10rem;
+				margin-bottom: 8rem;
 				.lesson-card {
 					background: $white;
 					@include box-shadow(0.1rem 0.8rem 3.5rem rgba(76, 76, 76, 0.5));				
@@ -653,7 +656,7 @@ body {
 						margin-top: 3.5rem;
 					}
 					.lesson-card__desc {
-						width: 80%;
+						width: 75%;
 						height: unset;
 						font-size: 1.2rem;
 						line-height: 2.4rem;
@@ -669,7 +672,7 @@ body {
 					.lesson-card__teacher-profile {
 						margin-top: 2rem;
 						padding: 0 5%;
-						margin-bottom: 10rem;
+						margin-bottom: 13rem;
 						.teacher-profile {
 							margin-left: 5%;						
 						}
@@ -679,13 +682,12 @@ body {
 				.lesson-button {
 					width: 100%;
 					height: 10rem;
-					bottom: -4rem;
 					&:hover {
 						@include box-shadow(none);					
 					}				
 					.lesson-button__submit {
 						bottom: 4rem;
-						font-size: 1.2rem;
+						font-size: 1.4rem;
 					}
 				}
 			}
@@ -726,7 +728,7 @@ body {
 			width: 15%;
 		}
 		.safety-title {
-			font-size: 1.6rem;
+			font-size: 2rem;
 			margin-top: 3rem;
 		}
 		.safety-text {
@@ -772,8 +774,8 @@ body {
 					font-size: 1rem;
 				}
 				.snap-content__header-title {
-					font-size: 1.6rem;
-					line-height: 2.4rem;
+					font-size: 2rem;
+					line-height: 1.5;
 					margin-top: 1rem;
 					margin-left: 12%;
 					word-break: keep-all;
