--- a/stylesheets/css/location.css
+++ b/stylesheets/css/location.css
@@ -15,16 +15,16 @@ body { width: 100%; overflow-x: hidden; }
 .location .location-content .location-content__header .content-header__subtitle { width: 100%; font-size: 1.6rem; font-family: 'oACYCZno'; color: #999999; text-align: left; }
 .location .location-content .location-content__header .content-header__title { width: 100%; font-size: 2.5rem; line-height: 1.5; font-family: 'oACYCZno'; font-weight: bold; color: #2b2b2b; margin-top: 1rem; text-align: left; word-break: keep-all; word-wrap: break-word; }
 .location .location-content .location-content__link { position: relative; width: 30%; margin-top: 8rem; }
-.location .location-content .location-content__link .content-link__btn { width: 80%; height: 7.5rem; border-radius: 7.5rem; border: none; background-color: #1338d1; margin-left: -3rem; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-left: 3rem; padding-right: 3rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; -webkit-justify-content: space-between; -moz-justify-content: space-between; -ms-justify-content: space-between; justify-content: space-between; -ms-flex-pack: space-between; cursor: pointer; margin-top: 2rem; }
+.location .location-content .location-content__link .content-link__btn { width: 80%; height: 7.5rem; border-radius: 7.5rem; border: none; background-color: #1338d1; margin-left: -3rem; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-left: 3rem; padding-right: 3rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: space-between; -ms-flex-pack: space-between; justify-content: space-between; cursor: pointer; margin-top: 2rem; }
 .location .location-content .location-content__link .content-link__btn:hover span { -webkit-transform: translateX(10px); -ms-transform: translateX(10px); transform: translateX(10px); }
 .location .location-content .location-content__link .content-link__btn p { font-size: 2rem; line-height: 2rem; font-family: 'Do Hyeon'; color: white; text-align: left; width: 65%; }
-.location .location-content .location-content__link .content-link__btn span { width: 2.5rem; height: 2rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
+.location .location-content .location-content__link .content-link__btn span { width: 2.5rem; height: 2rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
 .location .location-content .location-content__link .content-link__btn span img { width: 100%; }
 
-.location-info { margin-top: 4rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-justify-content: space-between; -moz-justify-content: space-between; -ms-justify-content: space-between; justify-content: space-between; -ms-flex-pack: space-between; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 0 12%; position: relative; }
+.location-info { margin-top: 4rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: space-between; -ms-flex-pack: space-between; justify-content: space-between; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 0 12%; position: relative; }
 .location-info .info-tab-wrapper { display: -webkit-box; display: -ms-flexbox; display: flex; width: 50%; margin-right: 25%; }
 .location-info .info-tab-wrapper .info-tab { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; width: 50%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding-right: 7%; position: relative; }
-.location-info .info-tab-wrapper .info-tab .info-tab__header { width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; }
+.location-info .info-tab-wrapper .info-tab .info-tab__header { width: 100%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
 .location-info .info-tab-wrapper .info-tab .info-tab__header .tab-header-icon { width: 20%; margin-right: 5%; }
 .location-info .info-tab-wrapper .info-tab .info-tab__header .tab-header-icon img { width: 100%; }
 .location-info .info-tab-wrapper .info-tab .info-tab__header .tab-header__title { width: 65%; font-size: 1.8rem; font-family: 'oACYCZno'; font-weight: bold; color: #2b2b2b; }
@@ -37,16 +37,16 @@ body { width: 100%; overflow-x: hidden; }
 .ad .ad-tab { width: calc(100% / 3); height: 15vw; position: relative; cursor: pointer; }
 .ad .ad-tab:hover .ad-tab__img img { -webkit-transform: scale(1); -ms-transform: scale(1); transform: scale(1); }
 .ad .ad-tab:hover .ad-tab__text span { -webkit-transform: translateX(10px); -ms-transform: translateX(10px); transform: translateX(10px); }
-.ad .ad-tab:nth-of-type(1) .ad-tab__img { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; -webkit-justify-content: center; -moz-justify-content: center; -ms-justify-content: center; justify-content: center; -ms-flex-pack: center; }
+.ad .ad-tab:nth-of-type(1) .ad-tab__img { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
 .ad .ad-tab:nth-of-type(1) .ad-tab__img img { width: unset; height: 100%; }
 .ad .ad-tab .ad-tab__img { width: 100%; height: 100%; position: relative; overflow: hidden; }
 .ad .ad-tab .ad-tab__img img { width: 100%; -webkit-transform: scale(1.05); -ms-transform: scale(1.05); transform: scale(1.05); -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
 .ad .ad-tab .ad-tab__filter { width: 100%; height: 100%; position: absolute; top: 0; left: 0; background-color: rgba(19, 56, 209, 0.7); }
 .ad .ad-tab .ad-tab__filter.red { background-color: rgba(255, 80, 89, 0.7); }
 .ad .ad-tab .ad-tab__filter.green { background-color: rgba(80, 234, 197, 0.7); }
-.ad .ad-tab .ad-tab__text { width: 100%; height: 100%; position: absolute; top: 0; left: 0; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; -webkit-justify-content: center; -moz-justify-content: center; -ms-justify-content: center; justify-content: center; -ms-flex-pack: center; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 5% 10%; }
+.ad .ad-tab .ad-tab__text { width: 100%; height: 100%; position: absolute; top: 0; left: 0; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 5% 10%; }
 .ad .ad-tab .ad-tab__text .text-title { width: 100%; text-align: center; font-size: 2.2rem; color: white; font-family: 'Do Hyeon'; }
-.ad .ad-tab .ad-tab__text span { margin-top: 2rem; width: 40%; height: 1.8rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-justify-content: center; -moz-justify-content: center; -ms-justify-content: center; justify-content: center; -ms-flex-pack: center; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
+.ad .ad-tab .ad-tab__text span { margin-top: 2rem; width: 40%; height: 1.8rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; }
 .ad .ad-tab .ad-tab__text span img { width: 100%; }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) { .location { height: 42vw; }
@@ -66,10 +66,10 @@ body { width: 100%; overflow-x: hidden; }
   .location .location-content { position: absolute; width: 100%; margin-top: 10%; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; padding: 0 7%; top: 0; left: 0; }
   .location .location-content .location-content__header { width: 70%; }
   .location .location-content .location-content__header .content-header__subtitle { font-size: 1rem; }
-  .location .location-content .location-content__header .content-header__title { width: 100%; font-size: 1.8rem; line-height: 2.6rem; margin-top: 1rem; }
+  .location .location-content .location-content__header .content-header__title { width: 100%; font-size: 2rem; line-height: 1.5; margin-top: 1rem; }
   .location .location-content .location-content__link { position: relative; width: 52%; margin-top: 4rem; }
   .location .location-content .location-content__link .content-link__btn { width: 100%; height: 4.5rem; border-radius: 4.5rem; margin-left: -1rem; padding-left: 2rem; padding-right: 2rem; margin-top: 1rem; }
-  .location .location-content .location-content__link .content-link__btn p { font-size: 1.2rem; }
+  .location .location-content .location-content__link .content-link__btn p { font-size: 1.4rem; width: 80%; }
   .location .location-content .location-content__link .content-link__btn span { width: 1.8rem; }
   .location-info { margin-top: 0rem; -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; padding: 0 7%; }
   .location-info .info-tab-wrapper { -webkit-box-direction: column; -ms-flex-direction: column; flex-direction: column; width: 100%; margin-right: 0; }
@@ -82,9 +82,9 @@ body { width: 100%; overflow-x: hidden; }
   .location-info .info-book .info-tab__book { width: 100%; height: 4.5rem; border-radius: 4.5rem; font-size: 1.2rem; }
   .ad { margin-top: 8rem; padding: 0 3%; }
   .ad .ad-tab { height: 40vw; }
-  .ad .ad-tab .ad-tab__img { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-align-items: center; -moz-align-items: center; -ms-align-items: center; align-items: center; -webkit-justify-content: center; -moz-justify-content: center; -ms-justify-content: center; justify-content: center; -ms-flex-pack: center; }
+  .ad .ad-tab .ad-tab__img { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
   .ad .ad-tab .ad-tab__img img { width: unset; height: 100%; -webkit-transform: scale(1.05); -ms-transform: scale(1.05); transform: scale(1.05); }
-  .ad .ad-tab .ad-tab__text .text-title { font-size: 1.4rem; word-break: keep-all; word-wrap: break-word; }
+  .ad .ad-tab .ad-tab__text .text-title { font-size: 1.6rem; word-break: keep-all; word-wrap: break-word; }
   .ad .ad-tab .ad-tab__text span { height: 1.5rem; } }
 
 /*# sourceMappingURL=location.css.map */
