--- a/stylesheets/location.scss
+++ b/stylesheets/location.scss
@@ -356,8 +356,8 @@ body {
 			}
 			.content-header__title {
 				width: 100%;
-				font-size: 1.8rem;
-				line-height: 2.6rem;
+				font-size: 2rem;
+				line-height: 1.5;
 				margin-top: 1rem;
 			}
 		}
@@ -374,7 +374,8 @@ body {
 				padding-right: 2rem;
 				margin-top: 1rem;
 				p{
-					font-size: 1.2rem;
+					font-size: 1.4rem;
+					width: 80%;
 				}
 				span {
 					width: 1.8rem;
@@ -447,7 +448,7 @@ body {
 		}		
 		.ad-tab__text {
 			.text-title {
-				font-size: 1.4rem;
+				font-size: 1.6rem;
 				word-break: keep-all;
 				word-wrap: break-word;
 			}
